<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonPanel"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinnerDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_centerInParent="true"
                    android:layout_toStartOf="@id/refresh_btn"
                    android:textSize="10sp" />

                <ImageView
                    android:id="@+id/refresh_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_baseline_refresh_24"
                    android:layout_toStartOf="@id/start_btn"
                    android:layout_centerInParent="true"
                    android:text="connect" />
                <Button
                    android:id="@+id/start_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:layout_centerInParent="true"
                    android:text="connect" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="Image"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:background="@drawable/border_dash">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/bg_f2f4f6" />

                <ImageView
                    android:id="@+id/image_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/ic_baseline_person_24" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tmNo"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tm_no_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_tmno"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingStart="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/passportNo"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passport_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_passport"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingStart="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/personNo"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/person_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_person"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingStart="16dp"
               />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/title_name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/title_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_title"
                android:drawableEnd="@drawable/ic_drop_down"
                android:drawableTint="@color/black"
                android:focusable="false"
                android:imeOptions="actionNext"
                android:cursorVisible="false"
                android:textColor="@color/black"
                android:inputType="text"
                android:paddingStart="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/First_name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstname_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_firstname"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/middle_Name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/middle_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_middlename"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lastname_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_lastname"
                android:imeOptions="actionNext"
                android:inputType="text"

                android:paddingStart="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/gender_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/ic_drop_down"
                android:drawableTint="@color/black"
                android:focusable="false"
                android:cursorVisible="false"
                android:textColor="@color/black"
                android:hint="@string/hint_gender"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/DOB"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dob_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_dob"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/DOE"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/doe_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_doe"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/nationality"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nationality_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_nationality"
                android:drawableEnd="@drawable/ic_drop_down"
                android:drawableTint="@color/black"
                android:focusable="false"
                android:cursorVisible="false"
                android:textColor="@color/black"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/address_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_address"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:paddingStart="16dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/read_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:padding="14dp"
            android:enabled="false"
            android:text="@string/read" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:enabled="false"
            android:padding="14dp"
            android:text="@string/next" />
    </LinearLayout>

</RelativeLayout>

